public/style.css
html body {
    padding: 0px;
    margin: 0px;
    color: green;
    font-family: monospace;
    font-size: 1.2em;
    background: black;
}

h1,h2,h3,h4 {
    font-weight: normal;
}

.center {
    text-align: center;
}

#input {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 10px;
    background:black;
    color: white;
    border: 1px solid green;
    padding: 5px;
    font-size: 1.2em;
}

.msg .mine {
    color: red;
    display: inline-block;
    width: 80px;
}

.msg .from {
    color: green;
    display: inline-block;
    width: 80px;
}

.msg span {
    color: white;
    margin-left: 10px;
}

.box {
    padding-left: 40px;
    padding-right: 40px;
    padding-top: 30px;
    padding-bottom: 30px;
}

.line {
    border-bottom: 1px dashed white;
    padding-bottom: 10px;
}

.kick {
    color: white;
    margin-left: 10px;
}

.red {
    color: red;
}

.green {
    color: green;
}

.white {
    color: white;
}

.yellow {
    color: yellow;
}

